--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
 		<link rel="stylesheet" href="styles.css" />
 	</head>
 	<body>
-		<input type="text" id="input-el"></input>
+		<input type="text" id="input-el" placeholder="ADD THOSE LEADS"></input>
           <button id='input-btn' >SAVE INPUT</button>
+          <button id="delete-btn">DELETE ALL</button>
            <ul id="ul-el"></ul>
 		<script src="index.js"></script>
 	</body>
